# sse_event_radar

./: .env.example  .gitignore  README.md  pyproject.toml
config/: stock_knowledge.yaml  watchlist.yaml
scripts/: run_announcement_alert_pipeline.py  run_buy_signal_pipeline.py  run_event_driven_pipeline.py  smoke_test_akshare.py  test_feishu_bot.py  test_serverchan.py
src/sse_event_radar/: config.py  logging.py  network.py
src/sse_event_radar/alerts/: __init__.py  models.py  renderers.py  service.py
src/sse_event_radar/api/: app.py
src/sse_event_radar/collectors/: announcements.py  base.py  manual_news.py  quotes.py  stock_master.py
src/sse_event_radar/db/: models.py  session.py
src/sse_event_radar/models/: news.py
src/sse_event_radar/notifiers/: __init__.py  base.py  feishu_bot.py  serverchan.py
src/sse_event_radar/processors/: announcement_rules.py  buy_signal_rules.py  event_extractor.py  stock_mapper.py
src/sse_event_radar/services/: announcement_alert_pipeline.py  buy_signal_pipeline.py  event_driven_pipeline.py
tests/: test_imports.py
