[project]
name = "sse-event-radar"
version = "0.1.0"
description = "A local-first SSE A-share event radar and alert assistant using AKShare."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
